# com-rust

commune/data/: hosts.yaml
commune/module/: module.py
commune/modules/cli/: cli.py
commune/modules/client/: client.py
commune/modules/client/http/: client_http.py
commune/modules/executor/: task.py
commune/modules/executor/process/: process_executor.py
commune/modules/executor/thread/: thread_executor.py
commune/modules/remote/: remote.py
commune/modules/remote/remote_rust/: Cargo.toml
commune/modules/remote/remote_rust/src/: lib.rs
commune/modules/remote/src/: lib.rs
commune/modules/rust/remote_rust/: remote_rust.py
commune/modules/ssh/: ssh.py
commune/modules/subspace/: subspace.py  test.py
commune/modules/subspace/chain/substrate_subxt/: Cargo.toml
commune/modules/subspace/subspace_rust/: Cargo.toml  thread_rust.py
commune/modules/subspace/subspace_rust/src/: lib.rs
commune/modules/subspace/substrate-subxt/: sub.py
commune/modules/vali/: Cargo.toml  vali.py  vali_test.py
commune/modules/vali/src/: lib.rs
