[package]
name = "substrate_subxt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "my_module"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
substrate_subxt = "0.7.0"
tokio = { version = "1.0", features = ["full"] }
async-std = "1.10.0"
